2008-06-19  hemant kumar  <hemant@shire.com>

        * Make binary parser iterative and hence won't blow your stack

        * Add run_concurrent

        * Let parent sleep for a while when forking the bdrb master process.

        * Fixed issue with fork. BackgrounDRb now uses fork and exec.

2008-02-28  hemant kumar  <hemant@shire>

        * fixed some meory leaks.

        * Implemented cleaner API for invoking tasks in workers

        * Updated the documentation

2008-02-25  hemant kumar  <hemant@shire>

        * Commited Patch by Alex which lets BackgrounDRb to have command line arguments and loading of specific environments
        through command line argument.

2008-02-14  hemant kumar  <hemant@shire>

        * Added TestCases for Cron Triggers, Meta Workers and stuff. We are heading towards proper code coverage with specs.

        * Added preliminary support for starting a worker on demand through scheduler. What it means is, when you have a worker which is getting
        scheduled very less frequently and you don't want the worker to persist, you can ask BackgrounDRb to restart the worker on each schedule.

        * Fixed some unreported issues with writing data to socket between workers and stuff.

        * Fixed issues with too many open connections, because connections were not getting closed. BackgrounDRb now opens only one connection, which is
        reused throughout the lifecycle of rails application.

        * Fixed all outstanding issues with Cron triggers, BackgrounDRb now explicitly depends on "chronic" gem.

        * Removed Framework directory and BackgrounDRb now explicitly depends on packet gem.

