@@ -24,7 +24,15 @@ module BackgrounDRb
     def self.read_config(config_file)
       config = YAML.load(ERB.new(IO.read(config_file)).result)
       environment = ENV["RAILS_ENV"] || config[:backgroundrb][:environment] || "development"
-      Object.const_set("RAILS_ENV",environment)
+
+      if respond_to?(:silence_warnings)
+        silence_warnings do
+          Object.const_set("RAILS_ENV",environment)
+        end
+      else
+        Object.const_set("RAILS_ENV",environment)
+      end
+
       ENV["RAILS_ENV"] = environment
       config
     end
