@@ -11,6 +11,7 @@ context "Worker Proxy in general" do
     @cluster_conn = mock
     @worker_proxy = BackgrounDRb::RailsWorkerProxy.new(:hello_worker,nil,@cluster_conn)
   end
+
   specify "should let you fetch results" do
     @cluster_conn.expects(:backend_connections).returns([])
     foo = @worker_proxy.ask_result(:foobar)
@@ -34,6 +35,13 @@ context "Worker Proxy in general" do
   end
 
   specify "delete method should run on all nodes" do
+    conn_array = (0..3).map do |i|
+      t = mock()
+      t.expects(:delete_worker).with(:worker => :hello_worker).returns(nil)
+      t
+    end
+    @cluster_conn.expects(:backend_connections).returns(conn_array)
+    @worker_proxy.delete
   end
 
   specify "should let you invoke worker_info method" do
@@ -54,6 +62,40 @@ context "Worker Proxy in general" do
     @cluster_conn.expects(:find_connection).returns(actual_conn)
     @worker_proxy.async_foobar(:arg => :hello,:job_key => "boy",
                                :host => "192.168.2.100:100")
+  end
 
+  specify "for enqueued tasks" do
+    BdrbJobQueue = mock() unless Object.const_defined?(:BdrbJobQueue)
+    BdrbJobQueue.expects(:insert_job).with() { |value|
+      value[:worker_name].should == "hello_worker"
+      value[:worker_method].should == "foobar"
+      value[:scheduled_at].should.not == nil
+      value[:job_key] == "catz"
+    }
+    @worker_proxy.enq_foobar(:arg => :hello,:job_key => "catz")
+  end
+
+  specify "for removing tasks from the queue" do
+    BdrbJobQueue = mock() unless Object.const_defined?(:BdrbJobQueue)
+    BdrbJobQueue.expects(:remove_job).with() do |value|
+      value[:worker_name] == "hello_worker"
+      value[:worker_method] == "foobar"
+      value[:job_key] == "catz"
+    end
+    @worker_proxy.deq_foobar(:job_key => "catz")
+  end
+
+  specify "should run task on all servers if asked" do
+    backend_connections = []
+    2.times { |i|
+      actual_conn = mock()
+      actual_conn.expects(:ask_work).with(:worker => :hello_worker,:worker_method => 'foobar',:job_key => 'hello')
+      backend_connections << actual_conn
+    }
+    @cluster_conn.expects(:backend_connections).returns(backend_connections)
+    a = @worker_proxy.async_foobar(:job_key => "hello",:host => :all)
+  end
+
+  specify "should switch connections if invoke fails on chosen one" do
   end
 end
